--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,53 +1,72 @@
-section.filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    display: flex;
-    justify-content: flex-end;
-}
-section.filters button {
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border: 0;
-    border-radius: 4px;
-    margin: auto 30px;
-}
-section.filters button:hover {
-    opacity: 90%;
+/*
+ * === Filters class style ===
+ */
+
+/* Filters style */
+.filters {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  height: 70px;
+  width: 100%;
 }
 
-section.filters div.locations {
-    height: 100%;
-    width: 25%;
-    border-right: 1px solid #DDDDDD;
-    margin-left: 50px;
+/* Search button style */
+.filters button {
+  background: #ff5a5f;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  float: right;
+  font-size: 18px;
+  height: 48px;
+  margin: 12px 30px;
+  width: 20%;
 }
-div.locations h3 {
-    font-weight: 600;
-    margin-bottom: 0px;
+
+/* Search button hover opacity */
+.filters button:hover {
+  background-color: rgba(255, 90, 95, .9);
 }
-div.locations h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin: 4px auto;
+
+/* Locations and amenities style */
+.locations,
+.amenities {
+  display: inline-block;
+  height: 100%;
+  width: 25%;
 }
-section.filters div.amenities {
-    height: 100%;
-    width: 25%;
-    margin-left: 50px;
-    margin-right: auto;
+
+/* Locations border */
+.locations {
+  border-right: 1px solid #ddd;
 }
-div.amenities h3 {
-    font-weight: 600;
-    margin-bottom: 0px;
+
+/*
+ * --- Places header style ---
+ */
+
+/* Header box sizing */
+.filters h2,
+.filters h3,
+.filters h4 {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
-div.amenities h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin: 4px auto;
+
+/* Header 3 style */
+.filters h3 {
+  font-size: 1.17em;
+  font-weight: 600;
+  height: 50%;
+  padding: 15.5px 0 0 30px;
+}
+
+/* Header 4 style */
+.filters h4 {
+  font-size: 14px;
+  font-weight: 400;
+  height: 50%;
+  padding: 4.5px 0 12px 30px;
 }
