--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,16 +1,17 @@
-/*
- * === Footer style ===
- */
-
-/* Footer style */
 footer {
-  align-items: center;
-  background-color: #fff;
-  border-top: 1px solid #ccc;
-  bottom: 0;
-  display: flex;
-  height: 60px;
-  justify-content: center;
-  position: absolute;
-  width: 100%;
+    background-color: white;
+    height: 60px;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    border-top: 1px solid #CCCCCC;
+    line-height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+p {
+    text-align: center;
+    vertical-align: middle;
 }
