--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,72 +1,49 @@
-/*
- * === Filters class style ===
- */
-
-/* Filters style */
 .filters {
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  height: 70px;
-  width: 100%;
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
 }
 
-/* Search button style */
-.filters button {
-  background: #ff5a5f;
-  border: none;
-  border-radius: 4px;
-  color: #fff;
-  float: right;
-  font-size: 18px;
-  height: 48px;
-  margin: 12px 30px;
-  width: 20%;
-}
-
-/* Search button hover opacity */
-.filters button:hover {
-  background-color: rgba(255, 90, 95, .9);
-}
-
-/* Locations and amenities style */
-.locations,
-.amenities {
-  display: inline-block;
-  height: 100%;
-  width: 25%;
-}
-
-/* Locations border */
 .locations {
-  border-right: 1px solid #ddd;
+    height: 100%;
+    width: 25%;
+    border-right: 1px solid #DDDDDD;
+    display: inline-block;
+    margin-left: 40px;
 }
 
-/*
- * --- Places header style ---
- */
-
-/* Header box sizing */
-.filters h2,
-.filters h3,
-.filters h4 {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+.amenities {
+    height: 100%;
+    width: 25%;
+    display: inline-block;
+    margin-left: 40px;
 }
 
-/* Header 3 style */
-.filters h3 {
-  font-size: 1.17em;
-  font-weight: 600;
-  height: 50%;
-  padding: 15.5px 0 0 30px;
+h3 {
+    font-weight: 600;
+    margin-top: 10px;
 }
 
-/* Header 4 style */
-.filters h4 {
-  font-size: 14px;
-  font-weight: 400;
-  height: 50%;
-  padding: 4.5px 0 12px 30px;
+h4 {
+    font-weight: 400;
+    font-size: 14px;
+    margin-top: -12px;
+}
+button {
+    font-size: 18px;
+    background-color: #ff5a5f;
+    color: #FFFFFF;
+    height: 48px;
+    border: 0;
+    width: 20%;
+    border-radius: 4px;
+    margin: 10px auto;
+    float: right;
+    margin-right: 20px;    
+}
+
+button:hover {
+    opacity: 0.9;
 }
