--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,118 +1,77 @@
-/*
- * === Filters class style ===
- */
-
-/* Filters style */
 .filters {
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  display: inline-block;
-  height: 70px;
-  width: 100%;
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    text-align: left;
+    display: inline-block;
 }
 
-/* Search button style */
-.filters button {
-  background: #ff5a5f;
-  border: none;
-  border-radius: 4px;
-  color: #fff;
-  float: right;
-  font-size: 18px;
-  height: 48px;
-  margin: 12px 30px;
-  width: 20%;
+.locations {
+    height: 100%;
+    width: 25%;
+    border-right: 1px solid #DDDDDD;
+    display: inline-block;
+    margin-left: 40px;
 }
 
-/* Search button hover opacity */
-.filters button:hover {
-  background-color: rgba(255, 90, 95, .9);
+.amenities {
+    height: 100%;
+    width: 25%;
+    display: inline-block;
+    margin-left: 40px;
+    position: absolute;
 }
 
-/* Locations and amenities style */
-.filters .locations,
-.filters .amenities {
-  display: inline-block;
-  height: 100%;
-  position: relative;
-  width: 25%;
+h3 {
+    font-weight: 600;
+    margin-top: 10px;
 }
 
-/* Locations border */
-.filters .locations {
-  border-right: 1px solid #ddd;
+h4 {
+    font-weight: 400;
+    font-size: 14px;
+    margin-top: -12px;
 }
 
-/* Locations and amenities hover opacity */
-.filters .locations:hover,
-.filters .amenities:hover {
-  background-color: #fafafa;
+ul, li {
+    list-style-type: none;
+    margin: 10px auto;
+    line-height: 10px;
 }
 
-/* Locations and amenities popover menu */
-.filters .popover {
-  background-color: #fafafa;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  display: none;
-  position: absolute;
-  width: 100%;
+button {
+    font-size: 18px;
+    background-color: #ff5a5f;
+    color: #FFFFFF;
+    height: 48px;
+    width: 20%;
+    border-radius: 4px;
+    margin: 10px auto;
+    float: right;
+    margin-right: 20px;
+    position: relative;    
 }
 
-/* Locations and amenities popover hover */
-.filters .locations:hover .popover,
-.filters .amenities:hover .popover {
-  display: block;
+button:hover {
+    opacity: 0.9;
 }
 
-/* Locations list style */
-.filters .locations ul {
-  padding: 6px 0 6px 0;
+.popover {
+    display: none;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    background-color: #FAFAFA;
+    border-radius: 4px;
+    margin-left: -41px;
+    position: relative;
 }
 
-/* Locations list element margin */
-.filters .locations li {
-  margin: 0 auto 6px 3em;
+div.locations:hover ul.popover {
+    display: block;
 }
 
-/* Amenities list element margin */
-.filters .amenities li {
-  margin: 12px auto 12px 30px;
-}
-
-/*
- * --- Filters header style ---
- */
-
-/* Header box sizing */
-.filters h2,
-.filters h3,
-.filters h4 {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-/* Header 2 style */
-.filters h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 12px auto 0 30px;
-}
-
-/* Header 3 style */
-.filters h3 {
-  font-size: 1.17em;
-  font-weight: 600;
-  height: 50%;
-  padding: 15.5px 0 0 30px;
-}
-
-/* Header 4 style */
-.filters h4 {
-  font-size: 14px;
-  font-weight: 400;
-  height: 50%;
-  padding: 4.5px 0 12px 30px;
+div.amenities:hover ul.popover {
+    display: block;
 }
