--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,9 +1,12 @@
-header{
-    background-color: white;
+header {
+    width: 100%;
     height: 70px;
-    width:100%;
+    top: 0%;
+    position: relative;
+    flex: none;
     border-bottom: 1px solid #CCCCCC;
-    background-image: url(../images/logo.png);
+    background-color: white;
+    background-image: url("../images/logo.png");
     background-repeat: no-repeat;
-    background-position-x: 20px;
+    background-position: 20px;
 }
