--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,12 +1,27 @@
-body{
+html, body {
+    height: 100%;
+}
+
+body {
     margin: 0;
     padding: 0;
     color: #484848;
-    font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    position: relative;
+    display: flex;
+    flex-flow: column nowrap;
 }
 
 .container {
+    width: 100%;
     max-width: 1000px;
     margin: 30px auto;
+    position: relative;
+    flex: 1 0 auto;
+}
+
+p {
+    text-align: center;
+    vertical-align: middle;
 }
