--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,22 +1,25 @@
-.filters {
-    background-color: white;
+.container .filters {
     height: 70px;
     width: 100%;
+    color: #ffffff;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
 }
 
-button {
-    font-size: 18px;
-    background-color: #ff5a5f;
-    color: #FFFFFF;
+.filters button {
     height: 48px;
-    border: 0;
     width: 20%;
+    font-size: 18px;
+    color: #ffffff;
+    background-color: #FF5A5F;
+    border: 0px;
     border-radius: 4px;
-    margin: 10px auto;
-    float: right;
-    margin-right: 20px;    
+    margin-right: 30px;
+    margin-left: auto;
 }
 
 button:hover {
