--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,49 +1,54 @@
-.filters {
-    background-color: white;
+.container .filters {
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
 }
 
-.locations {
+.locations, .amenities {
     height: 100%;
     width: 25%;
-    border-right: 1px solid #DDDDDD;
-    display: inline-block;
-    margin-left: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-indent: 3em;
 }
 
-.amenities {
-    height: 100%;
-    width: 25%;
-    display: inline-block;
-    margin-left: 40px;
-}
-
-h3 {
+.filters h3 {
     font-weight: 600;
-    margin-top: 10px;
+    margin: 0px;
 }
 
-h4 {
+.filters h4 {
     font-weight: 400;
     font-size: 14px;
-    margin-top: -12px;
-}
-button {
-    font-size: 18px;
-    background-color: #ff5a5f;
-    color: #FFFFFF;
-    height: 48px;
-    border: 0;
-    width: 20%;
-    border-radius: 4px;
-    margin: 10px auto;
-    float: right;
-    margin-right: 20px;    
+    margin: 0px;
 }
 
-button:hover {
-    opacity: 0.9;
+.filters button {
+    font-size: 18px;
+    color: #ffffff;
+    background-color: #FF5A5F;
+    height: 48px;
+    width: 20%;
+    border: 0px;
+    border-radius: 4px;
+    margin-right: 30px;
+    margin-left: auto;
+}
+
+.filters div:first-child {
+    border-right: 1px solid #DDDDDD;
+}
+.filters {
+	background-color:white;
+	height:70px;
+	width:100%;
+	border:1px solid #DDDDDD;
+	border-radius:4px;
+	position:relative;
 }
