--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,77 +1,169 @@
+* {
+    line-height: 1.5rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
 .filters {
-    background-color: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    text-align: left;
-    display: inline-block;
+    display: flex;
+    align-items: center;
 }
 
-.locations {
+.locations, .amenities {
     height: 100%;
     width: 25%;
+    padding-left: 3em;
+    position: relative;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+}
+
+.filters div:first-child {
     border-right: 1px solid #DDDDDD;
-    display: inline-block;
-    margin-left: 40px;
 }
 
-.amenities {
-    height: 100%;
-    width: 25%;
-    display: inline-block;
-    margin-left: 40px;
+.popover {
+    visibility: hidden;
+    background-color: #FAFAFA;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    box-sizing: border-box;
     position: absolute;
+    width: 100%;
+    margin: 0;
+    top: 100%;
+    left: 0;
+    padding: 3em;
+    z-index: 1;
 }
 
-h3 {
+.popover > ul {
+    position: relative;
+    padding-left: 2em;
+}
+
+.filters div:hover .popover {
+    visibility: visible;
+}
+
+.filters h3 {
     font-weight: 600;
-    margin-top: 10px;
 }
 
-h4 {
+.filters h4 {
     font-weight: 400;
     font-size: 14px;
-    margin-top: -12px;
 }
 
-ul, li {
-    list-style-type: none;
-    margin: 10px auto;
-    line-height: 10px;
-}
-
-button {
+.filters button {
     font-size: 18px;
-    background-color: #ff5a5f;
-    color: #FFFFFF;
+    color: white;
+    background-color: #FF5A5F;
     height: 48px;
     width: 20%;
+    border: 0px;
     border-radius: 4px;
-    margin: 10px auto;
-    float: right;
-    margin-right: 20px;
-    position: relative;    
+    margin-right: 30px;
+    margin-left: auto;
 }
 
 button:hover {
     opacity: 0.9;
+}* {
+    line-height: 1.5rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+.filters {
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+}
+
+.locations, .amenities {
+    height: 100%;
+    width: 25%;
+    padding-left: 3em;
+    position: relative;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+}
+
+.filters div:first-child {
+    border-right: 1px solid #DDDDDD;
 }
 
 .popover {
-    display: none;
-    width: 100%;
-    border: 1px solid #DDDDDD;
+    visibility: hidden;
     background-color: #FAFAFA;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
-    margin-left: -41px;
+    box-sizing: border-box;
+    position: absolute;
+    width: 100%;
+    margin: 0;
+    top: 100%;
+    left: 0;
+    padding: 3em;
+    z-index: 1;
+}
+
+.popover > ul {
     position: relative;
+    padding-left: 2em;
 }
 
-div.locations:hover ul.popover {
-    display: block;
+.filters div:hover .popover {
+    visibility: visible;
 }
 
-div.amenities:hover ul.popover {
-    display: block;
+.filters h3 {
+    font-weight: 600;
+}
+
+.filters h4 {
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.filters button {
+    font-size: 18px;
+    color: white;
+    background-color: #FF5A5F;
+    height: 48px;
+    width: 20%;
+    border: 0px;
+    border-radius: 4px;
+    margin-right: 30px;
+    margin-left: auto;
+}
+
+.filters div:first-child {
+    border-right: 1px solid #DDDDDD;
 }
